# affection

./: LICENSE  README.md  affection.py  pyproject.toml  test.py
